http://jira.sakaiproject.org/browse/SAK-16866  - merging to trunk up to r66416  - fixing comment floater rendering in IE versions  - adding new formats and language for warning where page title is too long
git-svn-id: https://source.sakaiproject.org/svn/rwiki/branches/SAK-16866@66468 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
+++ b/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
@@ -329,12 +329,16 @@ a.rwiki_help_popup_link span{ padding: 0 }
 	margin-top: 4px;
 	margin-bottom: 4px;
 	padding: 5px 5px 5px 5px;
+	width:100%;
+    width: 27em;
 	color: inherit;
-	width:325px;
 	border: 1px solid #09c;
 	background-color: #cef;
-	line-height: 100%
+	line-height: 100%;
 }
+.rwiki_help_popup textarea{
+	width:98%
+	}
 .rwiki_help_popup .act{ padding: 0; margin: 0 }
 .rwiki_help_popup h3{
 	font-size: 1em;
