--- a/rwiki-tool/tool/src/webapp/styles/wikiStyleIE7.css
+++ b/rwiki-tool/tool/src/webapp/styles/wikiStyleIE7.css
@@ -27,9 +27,6 @@ a:hover.previewToolBar,
 #rwiki_sidebar{
 	margin-top:-15px;
 }
-.rwiki_help_popup {
-   width: 25em;
-}
 
 .rwikicommentarrow{
 	padding:0;
